2012-10-23  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/testsuite/gpasm.mchip/asmfiles/macro1.asm,
    gpasm/testsuite/gpasm.mchip/asmfiles/macro3.asm,
    gpasm/testsuite/gpasm.mchip/asmfiles/poundv1.asm:
    fixed MPASM(X) "Warning[207]: Found label after column 1." which
    generates an error on gpasm
  * gpasm/testsuite/test: tests performed with --mpasm-compatible gpasm
    command line option
  * configure.ac, configure, doc/gputils.lyx: version changed to 0.14.3

2012-10-21  Borut Razem  <borutr@users.sourceforge.net>
  * gplink/gplink.h.in, gplink/scan.l:
    fixed bug #256: atrtificially addding a \n ate EOF if missing
  * gpasm/lst.c: fixed warning
  * gpasm/gperror.c, gpasm/scan.l, gpasm/parse.y:
    produce the listing file in case that included file doesn't exist
  * gpasm/parse.y, gpasm/lst.c, gpasm/directive.c, gpasm/gpasm.h.in:
    fixed listing for VARIABLE, CONSTANT, LOCAL and CONFIG directives

2012-10-13  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gperror.c, gpasm/util.c:
    synched GPE_DIFFLAB error message with MPASM(X)

2012-10-11  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c, gpasm/lst.h, gpasm/gpasm.c: list / sort all symbols,
    defines and macros
  * gpasm/directive.c: arity of INSN_CLASS_MOVINDF can't be 4, due to
    fix of list_length()
  * libgputils/Makefile.in, header/Makefile.in, libiberty/Makefile.in,
    lkr/Makefile.in, man/Makefile.in, man/fr/Makefile.in,
    gplink/Makefile.in, gputile/Makefile.in, gpasm/Makefile.in: regenerated

2012-10-10  Borut Razem  <borutr@users.sourceforge.net>
  * evaluate.c: fixed list_length() for cases where tail of the list is
    not a list; MPASM(X) compatible shift operations in mpasm
    compatibility mode
  * doc/gputils.lyx: documented MPASM(X) compatible shift operations in mpasm
    compatibility mode

2012-09-17  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * lkr/16f73_g.lkr: The repair of repair.
